--- a/latex/BridgeScreenWidget_8cpp.tex
+++ b/latex/BridgeScreenWidget_8cpp.tex
@@ -8,7 +8,10 @@ CS 3307, Hue \hyperlink{classLight}{Light} Application screen for viewing, addin
 {\ttfamily \#include $<$Wt/\+W\+Text$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Label$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Table$>$}\\*
+{\ttfamily \#include $<$Wt/\+W\+Image$>$}\\*
+{\ttfamily \#include $<$Wt/\+W\+Time$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Dialog$>$}\\*
+{\ttfamily \#include $<$Wt/\+W\+Border\+Layout$>$}\\*
 {\ttfamily \#include $<$fstream$>$}\\*
 {\ttfamily \#include \char`\"{}Bridge\+Screen\+Widget.\+h\char`\"{}}\\*
 {\ttfamily \#include \char`\"{}Bridge.\+h\char`\"{}}\\*
