--- a/latex/LightManagementWidget_8cpp.tex
+++ b/latex/LightManagementWidget_8cpp.tex
@@ -20,6 +20,7 @@ CS 3307, Hue \hyperlink{classLight}{Light} Application screen for managing light
 {\ttfamily \#include $<$Wt/\+W\+Menu$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Stacked\+Widget$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Image$>$}\\*
+{\ttfamily \#include $<$Wt/\+W\+Border\+Layout$>$}\\*
 {\ttfamily \#include $<$Wt/\+Json/\+Value$>$}\\*
 {\ttfamily \#include $<$Wt/\+Json/\+Object$>$}\\*
 {\ttfamily \#include $<$Wt/\+Json/\+Parser$>$}\\*
