--- a/latex/classWelcomeScreen.tex
+++ b/latex/classWelcomeScreen.tex
@@ -78,6 +78,12 @@ Wt\+::\+W\+Stacked\+Widget $\ast$ {\bfseries main\+Stack\+\_\+}\hypertarget{clas
 Wt\+::\+W\+Container\+Widget $\ast$ {\bfseries links\+\_\+}\hypertarget{classWelcomeScreen_aea50aeb2ceeaa7046396a48dcbb12271}{}\label{classWelcomeScreen_aea50aeb2ceeaa7046396a48dcbb12271}
 
 \item 
+Wt\+::\+W\+Image $\ast$ {\bfseries ppic\+\_\+}\hypertarget{classWelcomeScreen_a42d5d4b2de8a6dc14b5081555011fc11}{}\label{classWelcomeScreen_a42d5d4b2de8a6dc14b5081555011fc11}
+
+\item 
+Wt\+::\+W\+Container\+Widget $\ast$ {\bfseries pic\+Container\+\_\+}\hypertarget{classWelcomeScreen_a1bf928f5f50894fa8baab7c1f89f1be0}{}\label{classWelcomeScreen_a1bf928f5f50894fa8baab7c1f89f1be0}
+
+\item 
 \hyperlink{classCreateAccountWidget}{Create\+Account\+Widget} $\ast$ {\bfseries create\+Screen\+\_\+}\hypertarget{classWelcomeScreen_a6957eca431d149cdc83febea171247fb}{}\label{classWelcomeScreen_a6957eca431d149cdc83febea171247fb}
 
 \item 
