--- a/latex/MainApplication_8cpp.tex
+++ b/latex/MainApplication_8cpp.tex
@@ -7,6 +7,7 @@ CS 3307, Hue \hyperlink{classLight}{Light} Application main application environm
 
 {\ttfamily \#include $<$Wt/\+W\+Application$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Server$>$}\\*
+{\ttfamily \#include $<$Wt/\+W\+Link$>$}\\*
 {\ttfamily \#include $<$Wt/\+W\+Bootstrap\+Theme$>$}\\*
 {\ttfamily \#include \char`\"{}Welcome\+Screen.\+h\char`\"{}}\\*
 \subsection*{Functions}
